[gd_scene load_steps=5 format=2]

[ext_resource path="res://Mario-assets/Other/GameOver.png" type="Texture" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]
[ext_resource path="res://AudioStreamPlayer2D.gd" type="Script" id=3]
[ext_resource path="res://fonts/mario_font.tres" type="DynamicFont" id=4]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 321.0
margin_bottom = 182.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MarginContainer"]
position = Vector2( 159.5, 90 )
scale = Vector2( 0.944118, 0.9 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 321.0
margin_bottom = 182.0

[node name="Score" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 77.0
margin_bottom = 182.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer/Score"]
margin_right = 77.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "Score"
align = 1

[node name="Current_Score" type="Label" parent="MarginContainer/HBoxContainer/Score"]
margin_top = 12.0
margin_right = 77.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="Coins" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 182.0
size_flags_horizontal = 3

[node name="Coins" type="Label" parent="MarginContainer/HBoxContainer/Coins"]
margin_right = 77.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "Coins"
align = 1

[node name="Current_Coins" type="Label" parent="MarginContainer/HBoxContainer/Coins"]
margin_top = 12.0
margin_right = 77.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="World" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 239.0
margin_bottom = 182.0
size_flags_horizontal = 3

[node name="World" type="Label" parent="MarginContainer/HBoxContainer/World"]
margin_right = 77.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "World"
align = 1

[node name="Current_World" type="Label" parent="MarginContainer/HBoxContainer/World"]
margin_top = 12.0
margin_right = 77.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="Time" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 321.0
margin_bottom = 182.0
size_flags_horizontal = 3

[node name="Time" type="Label" parent="MarginContainer/HBoxContainer/Time"]
margin_right = 78.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "Time"
align = 1

[node name="Current_Time" type="Label" parent="MarginContainer/HBoxContainer/Time"]
margin_top = 12.0
margin_right = 78.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 3 )
